# book-manager-sys

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
src/cli/: app.py  output.py
src/cli/commands/: add.py  base.py  delete.py  list.py  search.py  status.py
src/models/: base.py  book.py
src/storage/: abstract.py  json_storage.py
tests/: conftest.py  test_app.py  test_book_model.py  test_commands.py  test_output.py  test_storage.py
